[SO] fixed SearchServiceIntegrationTest